src/test/deca/context/invalid/provided/initialisation-incompatible9.deca
/*/ Description:
//    Initialisation et typage
//
// Resultats:
//    Ligne 10: Initialisation de types incompatibles.
//
// Historique:
//    cree le 01/01/2022*/
{
   boolean a= "yes" ;
   
}
